$Id$                       -*-text-*-


**** 1.41 [unreleased]

	Accept inbound Ethernet "Jumbo" UDP packet.
	Tolerate printer mDNS/SD response with compressed SRV RDATA.


**** 1.40 Aug 30, 2023

	Add support for SVCB dohpath and ohttp parameters.
	More robust test of bgbusy() SpamAssassin workaround.

Fix rt.cpan.org #149456 
	t/05-SOA.t test fails in 2038

Fix rt.cpan.org #149280
	Deep recursion on subroutine "Net::DNS::Resolver::Recurse::_recurse"


**** 1.39 Jun 1, 2023

Fix rt.cpan.org #148340
	udpsize uninitialized value


**** 1.38 May 9, 2023

	Mailbox.pm: Improve robustness of address parsing.
	Deprecate packet->edns->size() method.
	Deprecate rdatastr() historical RR subtype method.
	Major overhaul of pre-installation test scripts.
	Add new t/TestToolkit.pm
	Refactor socket code and control structure in
	Nameserver.pm and improve efficiency of zonefile
	data storage and retrieval.

Fix rt.cpan.org #148274
	Multicast DNS flag breaks Net::DNS::Parameters::classbyval

Fix rt.cpan.org #148273
	EDNS extended rcode not handled correctly

Fix rt.cpan.org #147507
	Nameserver.pm: peerhost undefined after $sock->accept


**** 1.37 Mar 13, 2023

	Add links to relevant RFCs in package documentation.

Fix rt.cpan.org #147038
	resolver->axfr( undef ) fails silently

Fix rt.cpan.org #145944
	Case sensitivity issue with AXFR


**** 1.36 Dec 30, 2022

	Adopt JSON as presentation notation for EDNS options.
	Disallow zero packet->id in outbound packet.
	Remove deprecated 2-argument TSIG->create() method.
	Revise TSIG test scripts and documentation.


**** 1.35 Oct 4, 2022

	Improve SVCB error reporting.

Fix rt.cpan.org #144328
	accept_reply test fails with matched consecutive "random"
	generated packet->id

Fix rt.cpan.org #144299
	Spelling errors.


**** 1.34 May 30, 2022

	Improve robustness of EDNS option compose/decompose functions.
	Simplify code in Makefile.PL.

Fix rt.cpan.org #142426
	Avoid "Useless use of a constant in void context" warning.

